--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
+  cloud_firestore: ^0.7.3 # Filebase
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
