--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.7.3 # Filebase
+  english_words: ^3.1.0 #
   
 dev_dependencies:
   flutter_test:
