--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.7.3 # Filebase
   english_words: ^3.1.0 #
+  http: "^0.11.3+16"
   
 dev_dependencies:
   flutter_test:
