--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  google_sign_in: 3.0.4
-  firebase_analytics: 1.0.1
-  firebase_auth: 0.5.12
-  firebase_database: 1.0.2
-  firebase_storage: 1.0.0
-  english_words: ^3.1.0
-  http: "^0.11.3+16"
+  google_sign_in: ^3.2.1
+  firebase_auth: ^0.6.2+1
+  cloud_firestore: ^0.8.1+1
   
 dev_dependencies:
   flutter_test:
