--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  google_sign_in: ^3.2.1
-  firebase_auth: ^0.6.2+1
-  cloud_firestore: ^0.8.1+1
+  google_sign_in: ^3.2.4
+  firebase_auth: ^0.6.6
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
