--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   google_sign_in: ^3.2.4
   firebase_auth: ^0.6.6
+  cloud_firestore: ^0.8.2+3
 
 dev_dependencies:
   flutter_test:
