--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   google_sign_in: ^3.2.4
-  flutter_facebook_login: ^1.1.1
+  # flutter_facebook_login: ^1.1.1
   firebase_auth: ^0.6.6
   cloud_firestore: ^0.8.2+3
+  device_info: ^0.3.0
 
 dev_dependencies:
   flutter_test:
