--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   firebase_auth: ^0.6.6
   cloud_firestore: ^0.8.2+3
   device_info: ^0.3.0
+  camera:
+  path_provider: ^0.4.1
+  video_player: ^0.5.2
 
 dev_dependencies:
   flutter_test:
