--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   device_info: ^0.3.0
   camera:
   path_provider: ^0.4.1
-  video_player: ^0.5.2
+  flutter_map: ^0.1.4
 
 dev_dependencies:
   flutter_test:
