--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,9 +31,10 @@ android {
         applicationId "com.zhangdoa.unboungo"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 0
+        versionName "0.0.1-20190111"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -54,6 +55,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "com.android.support:appcompat-v7:28.0.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
