--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   device_info: ^0.3.0
   camera:
   flutter_map: ^0.1.4
+  geolocator: '^2.1.1'
 
 dev_dependencies:
   flutter_test:
