--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cloud_firestore: ^0.8.2+3
   device_info: ^0.3.0
   camera:
+  barcode_scan: ^0.0.8
+  qr_flutter: ^1.1.5
   flutter_map: ^0.1.4
   geolocator: '^2.1.1'
 
